Update: News - 2022 / 07 / 02 - FLL 0.5.10 Release

--- a/documentation/fake.html
+++ b/documentation/fake.html
@@ -300,7 +300,7 @@
                     </tr>
                     <tr class="row">
                       <td class="column"><code class="code">make</code></td>
-                      <td class="column">Build or compile the code based on fakefile.</td>
+                      <td class="column">Build or compile the code based on fakefile (default).</td>
                     </tr>
                     <tr class="row">
                       <td class="column"><code class="code">skeleton</code></td>
