--- a/news.html
+++ b/news.html
@@ -51,6 +51,10 @@
       <div id="nav-expanded" class="nav-block">
         <nav id="kevux-document-nav" class="nav-menu">
           <div class="nav-item block">
+            <div class="nav-text notice">2022 / 07 / 02</div>
+            <a href="news/2022_07_02-fll_0_5_10_release.html" class="nav-text link">FLL 0.5.10 Release</a>
+          </div>
+          <div class="nav-item block">
             <div class="nav-text notice">2022 / 06 / 04</div>
             <a href="news/2022_06_04-librem_to_freedom.html" class="nav-text link">Librem to Freedom</a>
           </div>
@@ -88,6 +92,40 @@
 
           <article class="article">
             <header class="article-header header">
+              <h2 class="article-title h h2">2022 / 07 / 02 - FLL 0.5.10 Release</h2>
+            </header>
+
+            <div class="article-content" id="2022_06_04-librem_to_freedom">
+              <p class="p">
+                The Featureless Linux Library development version 0.5.10 is released.
+              </p>
+              <p class="p">
+                This release is a release canditate for the stable version 0.6.0.
+              </p>
+              <p class="p">
+                Unit tests for all <em>level_0</em> projects now exists (except for f_type which is not planned to ever have unit tests).
+              </p>
+              <p class="p">
+                Many problems and consistency issue have been identified by the written unit tests and fixed.
+                The unit tests, however, are neither complete nor thorough.
+                There are almost no unit tests for <em>level_1</em>, <em>level_2</em>, or <em>level_3</em> projects.
+              </p>
+              <p class="p">
+                I noticed that the Unicode processing code is incomplete as of the 0.5.9 release.
+                The available Unicode processing functions are now complete.
+                A massive amount of unit tests now exist for testing the Unicode.
+              </p>
+              <p class="p">
+                Check out the project on the <a href="fll.html#release" class="link"><abbr title="Featureless Linux Library">FLL</abbr> release</a> page.
+              </p>
+              <p class="p">
+                <a href="news/2022_07_02-fll_0_5_10_release.html" class="content link">Continue reading…</a>
+              </p>
+            </div>
+          </article>
+
+          <article class="article">
+            <header class="article-header header separate">
               <h2 class="article-title h h2">2022 / 06 / 04 - Librem to Freedom</h2>
             </header>
 
