Cleanup: Remove redundant "pre-packaged" text in links.

--- a/fll.html
+++ b/fll.html
@@ -129,122 +129,122 @@
                   </thead>
                   <tbody class="body set">
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/monolithic/fll-0.5.10.tar.gz" class="link download">FLL 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/monolithic/fll-0.5.10.tar.gz" class="link download">FLL 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/monolithic/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/monolithic/fll-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/byte_dump-0.5.10.tar.gz" class="link download">Byte Dump 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/byte_dump-0.5.10.tar.gz" class="link download">Byte Dump 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/byte_dump-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/control-0.5.10.tar.gz" class="link download">Control 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/control-0.5.10.tar.gz" class="link download">Control 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/control-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/controller-0.5.10.tar.gz" class="link download">Controller 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/controller-0.5.10.tar.gz" class="link download">Controller 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/controller-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fake-0.5.10.tar.gz" class="link download">Fake 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fake-0.5.10.tar.gz" class="link download">Fake 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fake-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/firewall-0.5.10.tar.gz" class="link download">Firewall 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/firewall-0.5.10.tar.gz" class="link download">Firewall 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/firewall-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_list_read-0.5.10.tar.gz" class="link download">FSS Basic List Read 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_list_read-0.5.10.tar.gz" class="link download">FSS Basic List Read 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_list_read-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_list_write-0.5.10.tar.gz" class="link download">FSS Basic List Write 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_list_write-0.5.10.tar.gz" class="link download">FSS Basic List Write 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_list_write-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_read-0.5.10.tar.gz" class="link download">FSS Basic Read 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_read-0.5.10.tar.gz" class="link download">FSS Basic Read 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_read-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_write-0.5.10.tar.gz" class="link download">FSS Basic Write 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_write-0.5.10.tar.gz" class="link download">FSS Basic Write 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_basic_write-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_embedded_list_read-0.5.10.tar.gz" class="link download">FSS Embedded List Read 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_embedded_list_read-0.5.10.tar.gz" class="link download">FSS Embedded List Read 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_embedded_list_read-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_embedded_list_write-0.5.10.tar.gz" class="link download">FSS Embedded List Write 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_embedded_list_write-0.5.10.tar.gz" class="link download">FSS Embedded List Write 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_embedded_list_write-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_list_read-0.5.10.tar.gz" class="link download">FSS Extended List Read 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_list_read-0.5.10.tar.gz" class="link download">FSS Extended List Read 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_list_read-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_list_write-0.5.10.tar.gz" class="link download">FSS Extended List Write 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_list_write-0.5.10.tar.gz" class="link download">FSS Extended List Write 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_list_write-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_read-0.5.10.tar.gz" class="link download">FSS Extended Read 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_read-0.5.10.tar.gz" class="link download">FSS Extended Read 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_read-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_write-0.5.10.tar.gz" class="link download">FSS Extended Write 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_write-0.5.10.tar.gz" class="link download">FSS Extended Write 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_extended_write-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_identify-0.5.10.tar.gz" class="link download">FSS Identify 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_identify-0.5.10.tar.gz" class="link download">FSS Identify 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_identify-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_payload_read-0.5.10.tar.gz" class="link download">FSS Payload Read 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_payload_read-0.5.10.tar.gz" class="link download">FSS Payload Read 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_payload_read-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_payload_write-0.5.10.tar.gz" class="link download">FSS Payload Write 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_payload_write-0.5.10.tar.gz" class="link download">FSS Payload Write 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_payload_write-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/fss_status_code-0.5.10.tar.gz" class="link download">FSS Status Code 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/fss_status_code-0.5.10.tar.gz" class="link download">FSS Status Code 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fss_status_code-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/iki_read-0.5.10.tar.gz" class="link download">IKI Read 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/iki_read-0.5.10.tar.gz" class="link download">IKI Read 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/iki_read-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/iki_write-0.5.10.tar.gz" class="link download">IKI Write 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/iki_write-0.5.10.tar.gz" class="link download">IKI Write 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/iki_write-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/status_code-0.5.10.tar.gz" class="link download">Status Code 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/status_code-0.5.10.tar.gz" class="link download">Status Code 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/status_code-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
                     <tr class="row">
-                      <td class="column"><a href="release/fll/0.5/10/programs/utf8-0.5.10.tar.gz" class="link download">Utf8 0.5.10 - Pre-packaged</a></td>
+                      <td class="column"><a href="release/fll/0.5/10/programs/utf8-0.5.10.tar.gz" class="link download">Utf8 0.5.10</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/fll-0.5.10.tar.sha256" class="link download">SHA256</a></td>
                       <td class="column"><a href="release/fll/0.5/10/programs/utf8-0.5.10.tar.asc" class="link download">GPG</a></td>
                     </tr>
