Update: Add Design and Principles pages.
This prepares the website for the additional documentation on the FLL project.
Many of the text files from the "documents" directory will be transcribed into pages under this.
One such example would be the style_guide.txt file.

Includes miscellaneous changes.

Update the sources, preparing another website download package as of this commit.

--- a/distributions.html
+++ b/distributions.html
@@ -110,7 +110,7 @@
           </article>
 
           <article id="turtle_kevux" class="article">
-            <header class="article-header header">
+            <header class="article-header header separate">
               <h2 class="article-title h h2">About Releases and Scripts</h2>
             </header>
             <div class="article-content">
