--- a/fll.html
+++ b/fll.html
@@ -61,6 +61,9 @@
           <div class="nav-item block">
             <a href="fll/specifications.html" class="nav-text link">Specifications</a>
           </div>
+          <div class="nav-item block">
+            <a href="fll/design.html" class="nav-text link">Design and Principles</a>
+          </div>
           <div class="nav-item block ellipses">
             <a href="fll.html#nav-expanded" class="nav-text link open" title="Expand Menu">…</a>
             <a href="fll.html" class="nav-text link close">Collapse Menu</a>
