Update: The fake program documentation about piped data.

--- a/documentation/fake.html
+++ b/documentation/fake.html
@@ -321,6 +321,12 @@
               <p class="p">
                 For example, with '<code class="code">--fakefile my_fakefile</code>' the fakefile at '<code class="code">./data/build/my_fakefile</code>' would be used, however with '<code class="code">--fakefile ./my_fakefile</code>' the fakefile at '<code class="code">./my_fakefile</code>' would be used.
               </p>
+              <p class="p">
+                When piping data to this program, the piped data is treated as a <code class="code">fakefile</code>.
+              </p>
+              <p class="p">
+                Only the <code class="code">make</code> operation is supported when using piped data.
+              </p>
             </div>
           </section>
         </main>
